Fix dark mode colour

--- a/ArticleTemplates/assets/scss/themes/darkMode/_darkModeArticle.scss
+++ b/ArticleTemplates/assets/scss/themes/darkMode/_darkModeArticle.scss
@@ -107,10 +107,13 @@
         figure figcaption,
         .byline,
         .sponsorship__formatted-sponsor-name,
-        .listen-to-article__container,
+        .listen-to-article__container {
+            color: $warmGreyFour !important;
+        }
+
         .listen-to-article__container .audio-player__info__label,
         .listen-to-article__container .audio-player__info__duration {
-            color: $warmGreyFour !important;
+            color: #F6F6F6;
         }
 
         .alerts span.following[data-icon] {
